--- a/index.html
+++ b/index.html
@@ -3,9 +3,29 @@
 <html>
     <head>
         <title>Portifólio</title>
-    </head>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="/resources/css/styles.css" rel="stylesheet" type="text/css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+        <script src="/resources/scripts/script.js"></script>
+    </head>      
     <body>
+        <header>
+            <div class="header header-1" data-visible-range="0-100">
+                <h1><a href="index.html">LUCAS SANTI LEITE</a></h1>
+                <a href="index.html">sobre</a>
+                <a href="index.html">contato</a>
+            </div>
+            <div class="header header-2" data-visible-range="101-500">
+                <h1><a href="index.html">LUCAS SANTI LEITE</a></h1>
+                <a href="index.html">sobre</a>
+                <a href="index.html">contato</a>
+            </div>
+        </header>
+        <main>
 
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
