--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <a href="#sobre">sobre</a>
                         </li>
                         <li class="listItem">
-                            <a href="#conhecimento">conhecimento</a>
+                            <a href="#conhecimentos">conhecimentos</a>
                         </li>
                         <li class="listItem">
                             <a href="#contato">contato</a>
@@ -40,9 +40,29 @@
                     Gosto de filosofia, de teologia e de pensar.
                 </p>
            </section>
-            <section id="conhecimento">
-                <h1>CONHECIMENTO</h1>
-                <p></p>
+            <section id="conhecimentos">
+                <h1>CONHECIMENTOS</h1>
+                <ul class="linguagensList">
+                    <h4>Linguagens (conhecimento básico):</h4>
+                    <li class="listItem">c</li>
+                    <li class="listItem">java</li>
+                    <li class="listItem">javascript</li>
+                    <li class="listItem">html</li>
+                    <li class="listItem">css</li>
+                </ul>
+                <ul class="linguasList">
+                    <h4>Línguas:</h4>
+                    <li class="listItem">português (fluente)</li>
+                    <li class="listItem">inglês (intermediário)</li>
+                    <li class="listItem">espanhol (iniciante)</li>
+                </ul>                    
+                <ul class="outrosList">
+                    <h4>Outros</h4>
+                    <li class="listItem">Tenho facilidade para desenhar</li><br>
+                    <li class="listItem">Tenho um relativo conhecimento de filosofia</li>
+                    <li class="listSubItem">já li os autores: Platão, Descartes e Maquiavel</li><br>
+                    <li class="listItem">Tenho um relativo conhecimento de teologia</li>
+                    <li class="listSubItem">já li os autores: Alvin Plantinga, RC Sproul, Jonas Madureira, etc.</li>
            </section>
             <section id="contato">
                 <h1>CONTATO</h1>
