finalização do html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Portifólio</title>
+        <title>Portfólio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="/resources/css/styles.css" rel="stylesheet" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -19,6 +19,9 @@
                         </li>
                         <li class="listItem">
                             <a href="#conhecimentos">conhecimentos</a>
+                        </li>
+                        <li class="listItem">
+                            <a href="#projetos">projetos</a>
                         </li>
                         <li class="listItem">
                             <a href="#contato">contato</a>
@@ -39,10 +42,10 @@
                     Faço parte do programa de Iniciação Científica Jr. da UEL.<br>
                     Gosto de filosofia, de teologia e de pensar.
                 </p>
-           </section>
+            </section>
             <section id="conhecimentos">
                 <h1>CONHECIMENTOS</h1>
-                <ul class="linguagensList">
+                <ul class="mainList">
                     <h4>Linguagens (conhecimento básico):</h4>
                     <li class="listItem">c</li>
                     <li class="listItem">java</li>
@@ -50,13 +53,13 @@
                     <li class="listItem">html</li>
                     <li class="listItem">css</li>
                 </ul>
-                <ul class="linguasList">
+                <ul class="mainList">
                     <h4>Línguas:</h4>
                     <li class="listItem">português (fluente)</li>
                     <li class="listItem">inglês (intermediário)</li>
                     <li class="listItem">espanhol (iniciante)</li>
                 </ul>                    
-                <ul class="outrosList">
+                <ul class="mainList">
                     <h4>Outros</h4>
                     <li class="listItem">Tenho facilidade para desenhar</li><br>
                     <li class="listItem">Tenho um relativo conhecimento de filosofia</li>
@@ -64,13 +67,28 @@
                     <li class="listItem">Tenho um relativo conhecimento de teologia</li>
                     <li class="listSubItem">já li os autores: Alvin Plantinga, RC Sproul, Jonas Madureira, etc.</li>
            </section>
+           <section id="projetos">
+                <h1>PROJETOS</h1>
+                <ul class="mainList2">
+                    <li class="listItem">Site do mês do Orgulho</li><br>
+                    <li class="listItem">Site para portfólio</li><br>
+                    <li class="listItem"><b>Github:</b></li>
+                    <li class="listSubItem"><a href="https://github.com/lucassantileite">https://github.com/lucassantileite</a></li>
+                </ul>
+           </section>
             <section id="contato">
                 <h1>CONTATO</h1>
-                <p></p>
+                <p><b>Me contate!</b></p>
+                <p>Conversar seria um <i>prazer</i></p>
+                <a href="mailto:lucassanti.tinfem2023@gmail.com">Enviar e-mail</a> para
+                <b>lucassanti.tinfem2023@gmail.com</b>
            </section>
         </main>
         <footer>
-
+            <section class="footer">
+                <h1>LUCAS SANTI LEITE</h1>
+                <p>feito por<a href="https://github.com/lucassantileite"> <b><i>lucassantileite</i></b></a></p>
+            </section>
         </footer>
     </body>
 </html>
