--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <head>
         <title>Portfólio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="/resources/css/styles.css" rel="stylesheet" type="text/css">
+        <link href="resources/css/styles.css" rel="stylesheet" type="text/css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-        <script src="/resources/scripts/script.js"></script>
+        <script src="resources/scripts/script.js"></script>
     </head>      
     <body>
         <header>
@@ -28,6 +28,15 @@
                         </li>
                     </ul>
                 </nav>
+                <div class="dropdown">
+                    <button class="dropbtn" onclick="dropdown()">Menu</button>
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="#sobre">sobre</a>
+                        <a href="#conhecimentos">conhecimentos</a>
+                        <a href="#projetos">projetos</a>
+                        <a href="#contato">contato</a>
+                    </div>
+                </div>
             </div>
         </header>
         <main>
